<resources>
    <string name="app_name">Movies Box</string>
    <string name="movie_details_title">Movies Details</string>
    <string name="connection_error_message">Check Your Connection and Try Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu items-->
    <string name="movies_options_menu">Options</string>
    <string name="popular_movies_menu">Popular</string>
    <string name="top_movies_menu">High Rated</string>
    <string name="now_laying_menu">Now Playing</string>
    <string name="upcoming_movies_menu">Upcoming</string>
    <string name="favorite_movies_menu">Favorite</string>
</resources>
