<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/options_icon"
        android:orderInCategory="100"
        android:title="@string/movies_options_menu"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/popular"
                    android:orderInCategory="10"
                    android:title="@string/popular_movies_menu" />
                <item
                    android:id="@+id/high-rated"
                    android:orderInCategory="20"
                    android:title="@string/top_movies_menu" />
                <item
                    android:id="@+id/now_playing"
                    android:orderInCategory="40"
                    android:title="@string/now_laying_menu" />
                <item
                    android:id="@+id/upcoming"
                    android:orderInCategory="60"
                    android:title="@string/upcoming_movies_menu" />
                <item
                    android:id="@+id/favorite"
                    android:orderInCategory="80"
                    android:title="@string/favorite_movies_menu" />
            </group>
        </menu>
    </item>
</menu>